--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,10 @@
+body {
+  margin: 0;
+}
+
 #grid-container {
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 842px 421px;
     grid-auto-rows: minmax(100px, 100px);
   }
   #header {
@@ -32,14 +36,15 @@
   }
   #reviews {
     grid-column: 1;
-    grid-row: 8/21;
+    grid-row: 8/24;
     border: solid;
     border-color: grey;
     border-width: 1px;
     border-top: none;
     border-right: none;
+    border: none;
   }
   #related {
     grid-column: 1/3;
-    grid-row: 21/25;
+    grid-row: 24/29;
   }
