--- a/public/styles.css
+++ b/public/styles.css
@@ -7,13 +7,20 @@ body {
     grid-template-columns: 842px 421px;
     grid-auto-rows: minmax(100px, 100px);
   }
+
   #header {
     grid-column: 1/3;
     grid-row: 1;
     border: solid;
-    border-color: rgba(128, 128, 128, 0.5);
+    border-color: rgba(34, 34, 34, 0.15);
     border-width: 2px;
+    border-top: none;
+    border-left:none;
+    border-right: none;
+    background-image: url('imgs/etsyheader.png');
+    background-size: 1280px;
   }
+
   #image {
     grid-column: 1;
     grid-row: 2/8;
@@ -24,6 +31,7 @@ body {
     border-right: none;
     border-bottom: none;
   }
+
   #cart {
     grid-column: 2;
     grid-row: 2/21;
@@ -34,6 +42,7 @@ body {
     border-left: none;
     border-right: none;
   }
+
   #reviews {
     grid-column: 1;
     grid-row: 8/24;
@@ -44,6 +53,7 @@ body {
     border-right: none;
     border: none;
   }
+  
   #related {
     grid-column: 1/3;
     grid-row: 24/29;
