--- a/public/styles.css
+++ b/public/styles.css
@@ -4,57 +4,50 @@ body {
 
 #grid-container {
     display: grid;
-    grid-template-columns: 842px 421px;
+    grid-template-columns: 1fr 842px 421px 1fr;
     grid-auto-rows: minmax(100px, 100px);
   }
 
+  .headerContainer {
+    grid-column: 1/5;
+    grid-row: 1 / 2;
+    border: none;
+  }
+
   #header {
-    grid-column: 1/3;
-    grid-row: 1;
-    border: solid;
-    border-color: rgba(34, 34, 34, 0.15);
-    border-width: 2px;
-    border-top: none;
-    border-left:none;
-    border-right: none;
-    background-image: url('imgs/etsyheader.png');
-    background-size: 1280px;
+    max-width: 100%;
+    max-height: auto;
   }
 
   #image {
-    grid-column: 1;
-    grid-row: 2/8;
-    border: solid;
-    border-color: grey;
-    border-width: 1px;
-    border-top: none;
-    border-right: none;
-    border-bottom: none;
+    grid-column: 2/3;
+    grid-row: 3/9;
+    border: none;
   }
 
   #cart {
-    grid-column: 2;
-    grid-row: 2/21;
-    border: solid;
-    border-color: grey;
-    border-width: 1px;
-    border-top: none;
-    border-left: none;
-    border-right: none;
+    grid-column: 3/4;
+    grid-row: 3/25;
+    border: none;
   }
 
   #reviews {
-    grid-column: 1;
-    grid-row: 8/24;
-    border: solid;
-    border-color: grey;
-    border-width: 1px;
-    border-top: none;
-    border-right: none;
+    grid-column: 2/3;
+    grid-row: 9/25;
     border: none;
   }
-  
+
   #related {
-    grid-column: 1/3;
-    grid-row: 24/29;
+    grid-column: 1/5;
+    grid-row: 25/32;
+    border: none;
+  }
+
+  .footerContainer {
+    grid-column: 1/5;
+    grid-row: 32/37;
+  }
+
+  #footer {
+    max-width: 100%;
   }
